# OpenVRI

./: README.md
core/python/api/: __init__.py
core/python_core/api/: __init__.py  navigation.py  test.py
core/python_core/api/behavior/: __init__.py  smach.py
core/python_core/api/navigation/: navigation.py
gui/src/utilities/config_server/config/: color_lut.yaml~  config.yaml  config.yaml~  config_teen_strange.yaml
gui/src/utilities/config_server/config/kid1/: config.yaml  config_kid1.yaml  config_kid_size.yaml  kick.yaml
gui/src/utilities/config_server/config/kid2/: config.yaml  config_sit.yaml
gui/src/utilities/config_server/launch/: config.yaml  server.launch
gui/src/utilities/config_server/src/: configserver.cpp
gui/src/utilities/rcup_game_controller/: package.xml
gui/src/utilities/rcup_game_controller/include/: gamecontroller.h
gui/src/utilities/server_debug/: CMakeLists.txt  package.xml  plugin.xml
gui/src/utilities/server_debug/launch/: server_debug.launch
gui/src/visualizer/rqt_openvri_view/: plugin.xml
gui/src/visualizer/rqt_openvri_view/scripts/: rqt_openvri_view~
gui/src/visualizer/yaml-creators/kick-engine-yaml/: mainwindow.cpp
gui/src/visualizer/yaml-creators/kick-engine-yaml-build-desktop-Qt_4_8_1_in_PATH__System__Release/: kick-engine-yaml  moc_mainwindow.cpp
gui/src/visualizer/yaml-creators/special-action-yaml/: files.qrc  mainwindow.h
gui/src/visualizer/yaml-creators/special-action-yaml-build-desktop-Qt_4_8_1_in_PATH__System__Release/: moc_mainwindow.cpp
src/utilities/config_server/: CMakeLists.txt
src/utilities/config_server/config/: color_lut.yaml  config_stand.yaml.old  config_teen_110.yaml
src/utilities/config_server/config/kid1/:  kick_inclined.yaml  color_lut.yaml  config_stand.yaml.tmp
src/utilities/config_server/config/kid2/: config_kid2.yaml  kick.yaml  rosconsole.conf
src/utilities/config_server/config/kid3/: config.yaml  config_teen.yaml
src/utilities/module_name/include/module_name/: module_name.h  module_name_base.h
src/utilities/module_name/src/module_name/: module_name.cpp
src/utilities/process_name/process_name/launch/: gdb_process_name.launch
src/utilities/rcup_game_controller/: CMakeLists.txt
src/utilities/rcup_game_controller/src/: gamecontroller.cpp
src/utilities/server_debug/include/server_debug/: server_debug.h
src/utilities/server_debug/src/server_debug/: server_debug.cpp  server_debug_node.cpp
src/utilities/server_debug/srv/: ServerDebugDel.srv
src/visualizer/rqt_openvri_view/: CMakeLists.txt  package.xml  plugin.xml~  setup.py  setup.py~
src/visualizer/rqt_openvri_view/include/rqt_openvri_view/: openvri_view.h
src/visualizer/rqt_openvri_view/resources/: images.qrc  openvri_view.ui
src/visualizer/rqt_openvri_view/scripts/: rqt_openvri_view
src/visualizer/rqt_openvri_view/src/rqt_openvri_view/: parametertuner.cpp
src/visualizer/yaml-creators/kick-engine-yaml/: kick-engine-yaml.pro  mainwindow.ui
src/visualizer/yaml-creators/kick-engine-yaml-build-desktop-Qt_4_8_1_in_PATH__System__Release/: Makefile  config.yaml  qrc_files.cpp  ui_mainwindow.h
src/visualizer/yaml-creators/special-action-yaml/: mainwindow.cpp  mainwindow.ui  special-action-yaml.pro
src/visualizer/yaml-creators/special-action-yaml-build-desktop-Qt_4_8_1_in_PATH__System__Release/: Makefile  config.yaml  qrc_files.cpp  special-action-yaml  ui_mainwindow.h
(+23 files in other folders)
