<?xml version="1.0"?>
<package>
  <name>rqt_openvri_view</name>
  <version>0.0.0</version>
  <description>The rqt_open_vri package</description>
  <maintainer email="mohammadjv94@gmail.com">mj</maintainer>

<license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_cpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_cpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->
    <rqt_gui plugin="${prefix}/plugin.xml"/>

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
